--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -5,21 +5,24 @@
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 
-<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Questions</title>
 </head>
-<body>
+
+<html lang="en">
+    <h1 class="page-header">
+        Questions
+    </h1>
+
     {% if latest_question_list %}
-        <dif>
+        <div class="content">
         {% for question in latest_question_list %}
-            <p><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></p>
+            <li class="post" ><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
         {% endfor %}
-        </dif>
+        </div>
     {% else %}
         <p>No polls are available.</p>
     {% endif %}
 
-</body>
 </html>
